@@ -26,6 +26,7 @@ typedef struct {
 
 #define SWI_Brandy_Version				0x140000
 #define SWI_Brandy_Swap16Palette			0x140001
+#define SWI_Brandy_GetVideoDriver			0x140002
 
 #define SWI_RaspberryPi_GPIOInfo			0x140100
 #define SWI_RaspberryPi_GetGPIOPortMode			0x140101
@@ -52,6 +53,7 @@ static switable swilist[] = {
 
 	{SWI_Brandy_Version,				"Brandy_Version"},
 	{SWI_Brandy_Swap16Palette,			"Brandy_Swap16Palette"},
+	{SWI_Brandy_GetVideoDriver,			"Brandy_GetVideoDriver"},
 
 	{SWI_RaspberryPi_GPIOInfo,			"RaspberryPi_GPIOInfo"},
 	{SWI_RaspberryPi_GetGPIOPortMode,		"RaspberryPi_GetGPIOPortMode"},
